--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,8 @@ body {
   justify-content: center;
   min-height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-  background-color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #212121;
 }
 
@@ -61,7 +60,7 @@ body {
 }
 
 .gallery__link:hover {
-  cursor: zoom-in;
+cursor: zoom-in;
 }
 
 /* Lightbox */
@@ -83,6 +82,7 @@ body {
   opacity: 1;
   pointer-events: initial;
 }
+
 
 .lightbox__overlay {
   position: absolute;
@@ -128,7 +128,7 @@ body {
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
   outline: none;
-  background-image: url('../images/icon-close.svg');
+  background-image: url("../images/icon-close.svg");
   background-position: center;
   background-size: 60%;
   background-repeat: no-repeat;
